[package]
name = "mlua-sample"
version = "0.1.0"
authors = ["jprochazk <honza.spacir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.4", features = ["async", "send", "lua53", "vendored"] }
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2.21", features = ["rt-threaded", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"